--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,22 @@ services:
   postgres:
     image: postgres
     environment:
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: mysecretpassword
+      POSTGRES_DB: products
     ports:
       - "5432:5432"
-    volumes:
-      - ./pg_data:/var/lib/postgresql/data
+    networks:
+      - backend
+
+  nodejs:
+    build:
+      context: .
+    depends_on:
+      - postgres
+    networks:
+      - backend
+
+networks:
+  backend:
+    driver: bridge
